Cleaned up client
