# MVCApi.Client/src/api/swagger.json
@@ -1705,6 +1705,14 @@
         },
         "additionalProperties": false
       },
+      "ShoppingCartState": {
+        "enum": [
+          0,
+          1
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
       "ShoppingCartDto": {
         "type": "object",
         "properties": {
@@ -1718,6 +1726,9 @@
               "$ref": "#/components/schemas/ProductCartDto"
             },
             "nullable": true
+          },
+          "state": {
+            "$ref": "#/components/schemas/ShoppingCartState"
           }
         },
         "additionalProperties": false
