# MVCApi.Domain/Enums/ShoppingCartState.cs
@@ -1,0 +1,7 @@
+namespace MVCApi.Domain.Enums
+{
+    public enum ShoppingCartState
+    {
+        Operable, Locked
+    }
+}
